[package]
name = "eth-runtime"
version = "0.1.0"
authors = ["oasis evm"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", rev = "672f32aaf093eb5dc58cc37b7ceb76aebbcdd709" }
oasis-runtime-sdk-evm = { git = "https://github.com/oasisprotocol/oasis-sdk", rev = "672f32aaf093eb5dc58cc37b7ceb76aebbcdd709" }
cbor = { version = "=0.2.1", package = "oasis-cbor" }

# Third party.
thiserror = "1.0"
